@@ -8,7 +8,7 @@ Visit our project website for documentation, and more:
 http://www.mangosproject.org/
 
 Visit our forums for support:
-http://www.mangosproject.org/community/
+http://www.mangosproject.org/forum/
 
 Please submit bug reports at:
 https://svn.mangosproject.org/trac/MaNGOS/
